



EXTRA_DIST = Config




gs8dir = $(bindir)/Config
# gs8dictdir = $(gs8dir)/dictionary
# gs8gaugdir = $(gs8dir)/gauges
# gs8imagdir = $(gs8dir)/images
# gs8panldir = $(gs8dir)/panels
# gs8plugdir = $(gs8dir)/plugins
# gs8scrndir = $(gs8dir)/screens

install-data-local:
	@$(NORMAL_INSTALL)
	$(MKDIR_P) $(DESTDIR)$(gs8dir)
	cd $(top_srcdir)/Config  &&  find . -type f -exec $(INSTALL_DATA) -D {} $(DESTDIR)$(gs8dir)/{} \;


uninstall-local:
	@$(NORMAL_UNINSTALL)
	rm -fr $(DESTDIR)$(gs8dir)


# gs8_DATA = \
# 		shared.xsd \
# 		types.xsd \
# 		XmlObjects.xsd \
# 		XOConfiguration.xml \
# 		XOHTML.xml

# gs8dict_DATA = \
# 		dictionary/configurationPROJ.xml \
# 		dictionary/configurationWB.xml \
# 		\
# 		dictionary/CameraServer.xml \
# 		dictionary/configuration_server.xml \
# 		dictionary/configuration.xml \
# 		dictionary/configuration.xsd \
# 		dictionary/configuration0.xml \
# 		dictionary/configuration1.xml \
# 		dictionary/configuration2.xml \
# 		dictionary/configuration3.xml \
# 		\
# 		dictionary/LAV3_config_commander.xml \
# 		dictionary/LAV3_config_common.xml \
# 		dictionary/LAV3_config_crew.xml \
# 		dictionary/LAV3_config_driver.xml \
# 		dictionary/LAV3_config_gauges.xml \
# 		dictionary/LAV3_configuration0.xml \
# 		dictionary/LAV3_configuration1.xml \
# 		dictionary/LAV3_configuration2.xml \
# 		dictionary/LAV3_configuration3.xml \
# 		dictionary/LAV3_configurationVDDS.xml \
# 		dictionary/LAV3_configurationWB.xml \
# 		dictionary/LAV3_Settings.xml \
# 		dictionary/MPC_config_commander.xml \
# 		dictionary/MPC_config_common.xml \
# 		dictionary/MPC_config_driver.xml \
# 		dictionary/MPC_config_none.xml \
# 		dictionary/MPC_config_squad.xml \
# 		dictionary/MPC_configuration.xml \
# 		dictionary/MPC_configuration0.xml \
# 		dictionary/MPC_configuration1.xml \
# 		dictionary/MPC_configuration2.xml \
# 		dictionary/MPC_configuration3.xml \
# 		dictionary/MPC_configurationVDDS.xml \
# 		dictionary/MPC_configurationWB.xml \
# 		dictionary/MPC_Settings_metric.xml \
# 		dictionary/MPC_Settings.xml \
# 		\
# 		dictionary/Settings.xml \
# 		dictionary/Settings.xsd \
# 		\
# 		dictionary/VehicleData.xml \
# 		dictionary/VehicleData.xsd \
# 		dictionary/vehicledataconfiguration.xml

# gs8gaug_DATA = \
# 		\
# 		gauges/1-template.xml \
# 		gauges/alert-everything.xml \
# 		gauges/alert.xml \
# 		gauges/arc.xml \
# 		gauges/arcs.xml \
# 		gauges/arcs2.xml \
# 		gauges/battlevelhoriz.xml \
# 		gauges/battlevellight.xml \
# 		gauges/button-adjust-camera.xml \
# 		gauges/button-adjust-down.xml \
# 		gauges/button-adjust-up.xml \
# 		gauges/button-autocal.xml \
# 		gauges/button-autosteer.xml \
# 		gauges/button-blackout.xml \
# 		gauges/button-brightness.xml \
# 		gauges/button-camera_aux_1.xml \
# 		gauges/button-camera_aux_2.xml \
# 		gauges/button-camera_dvdplayer.xml \
# 		gauges/button-camera_front.xml \
# 		gauges/button-camera_frontcenter.xml \
# 		gauges/button-camera_frontleft.xml \
# 		gauges/button-camera_frontright.xml \
# 		gauges/button-camera_left.xml \
# 		gauges/button-camera_leftfront.xml \
# 		gauges/button-camera_leftrear.xml \
# 		gauges/button-camera_observer.xml \
# 		gauges/button-camera_pc.xml \
# 		gauges/button-camera_rear.xml \
# 		gauges/button-camera_rears.xml \
# 		gauges/button-camera_right.xml \
# 		gauges/button-camera_rightfront.xml \
# 		gauges/button-camera_rightrear.xml \
# 		gauges/button-camera_select.xml \
# 		gauges/button-camera-edit.xml \
# 		gauges/button-contrast.xml \
# 		gauges/button-daynight.xml \
# 		gauges/button-editpage.xml \
# 		gauges/button-enable.xml \
# 		gauges/button-eptm-autopan-define-left.xml \
# 		gauges/button-eptm-autopan-define-right.xml \
# 		gauges/button-eptm-autopan-faster.xml \
# 		gauges/button-eptm-autopan-slower.xml \
# 		gauges/button-eptm-autopan.xml \
# 		gauges/button-eptm-exit.xml \
# 		gauges/button-eptm-home.xml \
# 		gauges/button-eptm-set-home.xml \
# 		gauges/button-eptm-set-slew-center.xml \
# 		gauges/button-eptm-slew.xml \
# 		gauges/button-eptm.xml \
# 		gauges/button-everything.xml \
# 		gauges/button-exit_camera_select.xml \
# 		gauges/button-exit-adjust.xml \
# 		gauges/button-exit-everything.xml \
# 		gauges/button-gain.xml \
# 		gauges/button-gauge_detail.xml \
# 		gauges/button-gauge_state.xml \
# 		gauges/button-ir-camera-mode.xml \
# 		gauges/button-LAPSigma.xml \
# 		gauges/button-LAV3_edit.xml \
# 		gauges/button-LAV3_exit.xml \
# 		gauges/button-LAV3_FWD.xml \
# 		gauges/button-LAV3_PiP.xml \
# 		gauges/button-LAV3_Quad.xml \
# 		gauges/button-LAV3_REV.xml \
# 		gauges/button-LAV3_Single.xml \
# 		gauges/button-level.xml \
# 		gauges/button-OnePointCal.xml \
# 		gauges/button-PIP-Position.xml \
# 		gauges/button-PIP.xml \
# 		gauges/button-polarity.xml \
# 		gauges/button-quadrant_adjust_camera.xml \
# 		gauges/button-quadrant.xml \
# 		gauges/button-screen_mode_dn.xml \
# 		gauges/button-screen_mode_P.xml \
# 		gauges/button-screen_mode_R.xml \
# 		gauges/button-screen_mode.xml \
# 		gauges/button-seat_position.xml \
# 		gauges/button-sharpness.xml \
# 		gauges/button-shutdown.xml \
# 		gauges/button-shutter.xml \
# 		gauges/button-toggle_camera_feed.xml \
# 		gauges/button-units.xml \
# 		gauges/button-X.xml \
# 		gauges/button-zoom.xml \
# 		gauges/camera_aux_1.xml \
# 		gauges/camera_aux_2.xml \
# 		gauges/camera_dvd.xml \
# 		gauges/camera_frontcenter.xml \
# 		gauges/camera_frontleft.xml \
# 		gauges/camera_frontright.xml \
# 		gauges/camera_left.xml \
# 		gauges/camera_leftfront.xml \
# 		gauges/camera_leftrear.xml \
# 		gauges/camera_lost.xml \
# 		gauges/camera_observer.xml \
# 		gauges/camera_pc.xml \
# 		gauges/camera_rear.xml \
# 		gauges/camera_rearleft.xml \
# 		gauges/camera_rearright.xml \
# 		gauges/camera_right.xml \
# 		gauges/camera_rightfront.xml \
# 		gauges/camera_rightrear.xml \
# 		gauges/change-panel.xml \
# 		gauges/changepaneltimer.xml \
# 		gauges/color-everything.xml \
# 		gauges/color-theme-black.xml \
# 		gauges/color-theme-blue.xml \
# 		gauges/color-theme-cyan.xml \
# 		gauges/color-theme-green.xml \
# 		gauges/color-theme-magenta.xml \
# 		gauges/color-theme-red.xml \
# 		gauges/color-theme-white.xml \
# 		gauges/color-theme-yellow.xml \
# 		gauges/color-theme.xml \
# 		gauges/colors.xml \
# 		gauges/compass-old.xml \
# 		gauges/compass.xml \
# 		gauges/dial-fuel.xml \
# 		gauges/dial-oil.xml \
# 		gauges/dial-rpm.xml \
# 		gauges/dial-speed.xml \
# 		gauges/dial-temperature.xml \
# 		gauges/dial.xml \
# 		gauges/drop-out.xml \
# 		gauges/edit-label.xml \
# 		gauges/engoilpressurehoriz.xml \
# 		gauges/eptm-position.xml \
# 		gauges/eptm-slew.xml \
# 		gauges/err_unkown.xml \
# 		gauges/ESAV_eptm_joystick.xml \
# 		gauges/ESAV_view-camera-icon.xml \
# 		gauges/ESAV_view-feed-1.xml \
# 		gauges/ESAV_view-feed-2.xml \
# 		gauges/ESAV_view-feed-3.xml \
# 		gauges/ESAV_view-feed-4.xml \
# 		gauges/ESAV_view-layout-forward.xml \
# 		gauges/ESAV_view-layout-pc.xml \
# 		gauges/ESAV_view-layout-pip.xml \
# 		gauges/ESAV_view-layout-quad.xml \
# 		gauges/ESAV_view-layout-reverse.xml \
# 		gauges/ESAV_view-layout-single-reverse.xml \
# 		gauges/ESAV_view-layout-single.xml \
# 		gauges/ESAV_view-layout.xml \
# 		gauges/ESAV_view-quad.xml \
# 		gauges/ESAV_view-select-forward.xml \
# 		gauges/ESAV_view-select-quad.xml \
# 		gauges/ESAV_view-select-reverse.xml \
# 		gauges/ESAV_view-select-single-auto.xml \
# 		gauges/ESAV_view-select-single.xml \
# 		gauges/ESAV_view-select.xml \
# 		gauges/ESS_1.xml \
# 		gauges/ESS_2.xml \
# 		gauges/ESS_3.xml \
# 		gauges/ESS_4.xml \
# 		gauges/ESS_5.xml \
# 		gauges/ESS_6.xml \
# 		gauges/ESS_7.xml \
# 		gauges/ESS_8.xml \
# 		gauges/ESS_instructions.xml \
# 		gauges/ESS_noports.xml \
# 		gauges/ESS_spinner.xml \
# 		gauges/ess-label-reset.xml \
# 		gauges/everything.xml \
# 		gauges/fuel.xml \
# 		gauges/fuelhoriz.xml \
# 		gauges/Gauges.xsd \
# 		gauges/Gauges.xsx \
# 		gauges/Gauges2.xsd \
# 		gauges/Gauges2.xsx \
# 		gauges/gaugestogglenotice.xml \
# 		gauges/icon-autocal.xml \
# 		gauges/icon-autosteer.xml \
# 		gauges/icon-battery.xml \
# 		gauges/icon-blackout.xml \
# 		gauges/icon-brightness.xml \
# 		gauges/icon-camera-aux1.xml \
# 		gauges/icon-camera-aux2.xml \
# 		gauges/icon-camera-dvd.xml \
# 		gauges/icon-camera-FC.xml \
# 		gauges/icon-camera-FL.xml \
# 		gauges/icon-camera-FR.xml \
# 		gauges/icon-camera-L.xml \
# 		gauges/icon-camera-LF.xml \
# 		gauges/icon-camera-LR.xml \
# 		gauges/icon-camera-none.xml \
# 		gauges/icon-camera-observer.xml \
# 		gauges/icon-camera-pc.xml \
# 		gauges/icon-camera-R.xml \
# 		gauges/icon-camera-RF.xml \
# 		gauges/icon-camera-RR.xml \
# 		gauges/icon-camera-Rt.xml \
# 		gauges/icon-capacitor.xml \
# 		gauges/icon-contrast.xml \
# 		gauges/icon-daynight.xml \
# 		gauges/icon-down-arrow.xml \
# 		gauges/icon-edit-camera.xml \
# 		gauges/icon-engine-oil-pressure.xml \
# 		gauges/icon-exit.xml \
# 		gauges/icon-fuel.xml \
# 		gauges/icon-oil.xml \
# 		gauges/icon-OnePointCal.xml \
# 		gauges/icon-PIP.xml \
# 		gauges/icon-polarity.xml \
# 		gauges/icon-quadrant.xml \
# 		gauges/icon-selector-arrow-down.xml \
# 		gauges/icon-selector-arrow-left.xml \
# 		gauges/icon-selector-arrow-right.xml \
# 		gauges/icon-selector-arrow-up.xml \
# 		gauges/icon-sharpness.xml \
# 		gauges/icon-shutdown.xml \
# 		gauges/icon-shutter.xml \
# 		gauges/icon-starter.xml \
# 		gauges/icon-temperature-coolant.xml \
# 		gauges/icon-temperature-oil.xml \
# 		gauges/icon-temperature-trans.xml \
# 		gauges/icon-text.xml \
# 		gauges/icon-trans-oil-pressure.xml \
# 		gauges/icon-up-arrow.xml \
# 		gauges/icon-yogi.xml \
# 		gauges/icon-zoom.xml \
# 		gauges/JD-button-1.xml \
# 		gauges/JD-button-gauge-detail.xml \
# 		gauges/JD-button-gauge-state.xml \
# 		gauges/JD-button-units.xml \
# 		gauges/JD-color-theme-day.xml \
# 		gauges/JD-color-theme-night.xml \
# 		gauges/JD-color-theme.xml \
# 		gauges/JD-guidance-map.xml \
# 		gauges/JD-icon-text.xml \
# 		gauges/label-adjust.xml \
# 		gauges/label-DEBUG.xml \
# 		gauges/label-trans.xml \
# 		gauges/latlong-left.xml \
# 		gauges/latlong.xml \
# 		gauges/LAV3_button_DOWN.xml \
# 		gauges/LAV3_button_LEFT.xml \
# 		gauges/LAV3_button_RIGHT.xml \
# 		gauges/LAV3_button_UP.xml \
# 		gauges/LAV3_DEBUG.xml \
# 		gauges/LAV3_Event_Handlers_Camera_Select.ORG.xml \
# 		gauges/LAV3_Event_Handlers_Camera_Select.xml \
# 		gauges/LAV3_view-camera-icon.xml \
# 		gauges/LAV3_view-feed-1.xml \
# 		gauges/LAV3_view-feed-2.xml \
# 		gauges/LAV3_view-feed-3.xml \
# 		gauges/LAV3_view-feed-4.xml \
# 		gauges/LAV3_view-layout-forward.xml \
# 		gauges/LAV3_view-layout-PIP.xml \
# 		gauges/LAV3_view-layout-quad.xml \
# 		gauges/LAV3_view-layout-reverse.xml \
# 		gauges/LAV3_view-layout-single.xml \
# 		gauges/LAV3_view-layout.xml \
# 		gauges/LAV3_view-select-forward.xml \
# 		gauges/LAV3_view-select-PIP.xml \
# 		gauges/LAV3_view-select-quad.xml \
# 		gauges/LAV3_view-select-reverse.xml \
# 		gauges/LAV3_view-select-single.xml \
# 		gauges/LAV3_view-select.xml \
# 		gauges/LAV3-button-camera-feed.xml \
# 		gauges/led-number.xml \
# 		gauges/m1200-button-panel.xml \
# 		gauges/m1200-monitor-camera_icons.xml \
# 		gauges/m1200-view-camera-icon.xml \
# 		gauges/m1200-view-feed-1.xml \
# 		gauges/m1200-view-feed-2.xml \
# 		gauges/m1200-view-feed-3.xml \
# 		gauges/m1200-view-feed-4.xml \
# 		gauges/m1200-view-layout-forward.xml \
# 		gauges/m1200-view-layout-quad.xml \
# 		gauges/m1200-view-layout-reverse.xml \
# 		gauges/m1200-view-layout-single.xml \
# 		gauges/m1200-view-layout.xml \
# 		gauges/m1200-view-select-forward.xml \
# 		gauges/m1200-view-select-quad.xml \
# 		gauges/m1200-view-select-reverse.xml \
# 		gauges/m1200-view-select-single.xml \
# 		gauges/m1200-view-select.xml \
# 		gauges/m1200-view-single.xml \
# 		gauges/m1200a-button-seat_position.xml \
# 		gauges/MO_eptm_joystick.xml \
# 		gauges/MO_view-camera-icon.xml \
# 		gauges/MO_view-feed-1.xml \
# 		gauges/MO_view-feed-2.xml \
# 		gauges/MO_view-feed-3.xml \
# 		gauges/MO_view-feed-4.xml \
# 		gauges/MO_view-layout-forward.xml \
# 		gauges/MO_view-layout-pc.xml \
# 		gauges/MO_view-layout-pip.xml \
# 		gauges/MO_view-layout-quad.xml \
# 		gauges/MO_view-layout-reverse.xml \
# 		gauges/MO_view-layout-single-reverse.xml \
# 		gauges/MO_view-layout-single.xml \
# 		gauges/MO_view-layout.xml \
# 		gauges/MO_view-quad.xml \
# 		gauges/MO_view-select-forward.xml \
# 		gauges/MO_view-select-quad.xml \
# 		gauges/MO_view-select-reverse.xml \
# 		gauges/MO_view-select-single-auto.xml \
# 		gauges/MO_view-select-single.xml \
# 		gauges/MO_view-select.xml \
# 		gauges/monitor_edit_camera_events.xml \
# 		gauges/monitor-autosteer.xml \
# 		gauges/monitor-camera_icons.xml \
# 		gauges/mouse-passthrough.xml \
# 		gauges/mouse.xml \
# 		gauges/MPC_button-camera_frontcenter.xml \
# 		gauges/MPC_button-camera_observer.xml \
# 		gauges/MPC_monitor_edit_camera_events.xml \
# 		gauges/MPC_monitor-camera_icons.xml \
# 		gauges/MPC_view-camera-icon.xml \
# 		gauges/MPC_view-feed-1.xml \
# 		gauges/MPC_view-feed-2.xml \
# 		gauges/MPC_view-feed-3.xml \
# 		gauges/MPC_view-feed-4.xml \
# 		gauges/MPC_view-forward-single.xml \
# 		gauges/MPC_view-forward.xml \
# 		gauges/MPC_view-forward2.xml \
# 		gauges/MPC_view-layout-forward.xml \
# 		gauges/MPC_view-layout-quad.xml \
# 		gauges/MPC_view-layout-reverse.xml \
# 		gauges/MPC_view-layout-single-reverse.xml \
# 		gauges/MPC_view-layout-single.xml \
# 		gauges/MPC_view-layout.xml \
# 		gauges/MPC_view-quad.xml \
# 		gauges/MPC_view-reverse.xml \
# 		gauges/MPC_view-select-forward.xml \
# 		gauges/MPC_view-select-quad.xml \
# 		gauges/MPC_view-select-reverse.xml \
# 		gauges/MPC_view-select-single-auto.xml \
# 		gauges/MPC_view-select-single.xml \
# 		gauges/MPC_view-select.xml \
# 		gauges/MPC_view-single_commander.xml \
# 		gauges/MPC_view-single.xml \
# 		gauges/MPC_viewforward.xml \
# 		gauges/MPC_views.xml \
# 		gauges/none.xml \
# 		gauges/NVL_DEBUG.xml \
# 		gauges/NVL_Event_Handlers_Camera_Select.xml \
# 		gauges/NVL_Event_Handlers_Menu.xml \
# 		gauges/NVL_Main_Menu_Entry_1.xml \
# 		gauges/NVL_Main_Menu_Entry_2.xml \
# 		gauges/NVL_Main_Menu_Entry_3.xml \
# 		gauges/NVL_Main_Menu_Entry_4.xml \
# 		gauges/NVL_Main_Menu_Entry_5.xml \
# 		gauges/NVL_Main_Menu_Entry_Label.xml \
# 		gauges/NVL_Main_Menu_Item.xml \
# 		gauges/NVL_Menu_Item.xml \
# 		gauges/NVL_Sub_Menu_Entry_1.xml \
# 		gauges/NVL_Sub_Menu_Entry_2.xml \
# 		gauges/NVL_Sub_Menu_Entry_3.xml \
# 		gauges/NVL_Sub_Menu_Entry_4.xml \
# 		gauges/NVL_Sub_Menu_Entry_5.xml \
# 		gauges/NVL_Sub_Menu_Items_Camera_Settings.xml \
# 		gauges/NVL_Sub_Menu_Items_Exit.xml \
# 		gauges/NVL_Sub_Menu_Items_Misc.xml \
# 		gauges/NVL_Sub_Menu_Items_Quadrant.xml \
# 		gauges/NVL_Sub_Menu_Items_Screen_Mode.xml \
# 		gauges/NVL_SubSub_Menu_Entry_1.xml \
# 		gauges/NVL_SubSub_Menu_Entry_2.xml \
# 		gauges/NVL_SubSub_Menu_Entry_3.xml \
# 		gauges/NVL_SubSub_Menu_Entry_4.xml \
# 		gauges/NVL_SubSub_Menu_Entry_5.xml \
# 		gauges/NVL_SubSub_Menu_Items_Adjust_Gain.xml \
# 		gauges/NVL_SubSub_Menu_Items_Adjust_Level.xml \
# 		gauges/NVL_SubSub_Menu_Items_AGC.xml \
# 		gauges/NVL_SubSub_Menu_Items_Confirm_Shutdown.xml \
# 		gauges/NVL_view-camera-icon.xml \
# 		gauges/NVL_view-feed-1.xml \
# 		gauges/NVL_view-feed-2.xml \
# 		gauges/NVL_view-feed-3.xml \
# 		gauges/NVL_view-feed-4.xml \
# 		gauges/NVL_view-layout-forward.xml \
# 		gauges/NVL_view-layout-quad.xml \
# 		gauges/NVL_view-layout-reverse.xml \
# 		gauges/NVL_view-layout-single.xml \
# 		gauges/NVL_view-layout.xml \
# 		gauges/NVL_view-select-forward.xml \
# 		gauges/NVL_view-select-quad.xml \
# 		gauges/NVL_view-select-reverse.xml \
# 		gauges/NVL_view-select-single.xml \
# 		gauges/NVL_view-select.xml \
# 		gauges/oillevelhoriz.xml \
# 		gauges/oillevellight.xml \
# 		gauges/oilpressurelight.xml \
# 		gauges/oiltemphoriz.xml \
# 		gauges/pan-tilt-joy-stick.xml \
# 		gauges/proprietary.xml \
# 		gauges/resized.xml \
# 		gauges/rotary.xml \
# 		gauges/rotary270.xml \
# 		gauges/sample.xml \
# 		gauges/shuttingdown.xml \
# 		gauges/slider-battery-voltage.xml \
# 		gauges/slider-capacitor.xml \
# 		gauges/slider-engine-coolant-temp.xml \
# 		gauges/slider-engine-oil-pressure.xml \
# 		gauges/slider-engine-oil-temp.xml \
# 		gauges/slider-fuel.xml \
# 		gauges/slider-green-red.xml \
# 		gauges/slider-green-yellow-red.xml \
# 		gauges/slider-red-yellow-green.xml \
# 		gauges/slider-starter.xml \
# 		gauges/slider-trans-oil-pressure.xml \
# 		gauges/slider-trans-oil-temp.xml \
# 		gauges/slider.xml \
# 		gauges/sliderhider.xml \
# 		gauges/snake.xml \
# 		gauges/speed-dial.xml \
# 		gauges/speed.xml \
# 		gauges/steeringangle.xml \
# 		gauges/temperature.xml \
# 		gauges/tempgreen.xml \
# 		gauges/tempgreen2.xml \
# 		gauges/temphoriz.xml \
# 		gauges/terrain-mode.xml \
# 		gauges/time-left.xml \
# 		gauges/time.xml \
# 		gauges/touch-calibrate.xml \
# 		gauges/touch-recalibrate.xml \
# 		gauges/transmission-selector.xml \
# 		gauges/tune_key.xml \
# 		gauges/tune_video.xml \
# 		gauges/tune_view.xml \
# 		gauges/videoforward_center.xml \
# 		gauges/videoforward_left.xml \
# 		gauges/videoforward_mirror.xml \
# 		gauges/videoforward_right.xml \
# 		gauges/view-camera-icon.xml \
# 		gauges/view-feed-1.xml \
# 		gauges/view-feed-2.xml \
# 		gauges/view-feed-3.xml \
# 		gauges/view-feed-4.xml \
# 		gauges/view-forward-single.xml \
# 		gauges/view-forward.xml \
# 		gauges/view-forward2.xml \
# 		gauges/view-layout-forward.xml \
# 		gauges/view-layout-quad.xml \
# 		gauges/view-layout-reverse.xml \
# 		gauges/view-layout-single-reverse.xml \
# 		gauges/view-layout-single.xml \
# 		gauges/view-layout.xml \
# 		gauges/view-quad.xml \
# 		gauges/view-reverse.xml \
# 		gauges/view-select-forward.xml \
# 		gauges/view-select-quad.xml \
# 		gauges/view-select-reverse.xml \
# 		gauges/view-select-single-auto.xml \
# 		gauges/view-select-single.xml \
# 		gauges/view-select.xml \
# 		gauges/view-single_commander.xml \
# 		gauges/view-single.xml \
# 		gauges/viewautodriver.xml \
# 		gauges/viewforward.xml \
# 		gauges/views.xml


# gs8imag_DATA = \
# 		images/mpc-front-center.jpg \
# 		images/mpc-front-left.jpg \
# 		images/mpc-front-right.jpg \
# 		images/mpc-left-forward.jpg \
# 		images/mpc-rear.jpg \
# 		images/mpc-right-forward.jpg \
# 		images/yogi.jpg

# gs8panl_DATA = \
# 		panels/colors.xml \
# 		panels/commander_adjust_camera_page01.xml \
# 		panels/commander_adjust_camera_page02.xml \
# 		panels/commander_adjust_up_down.xml \
# 		panels/commander_adjust_zoom_up_down.xml \
# 		panels/commander_camera_select.xml \
# 		panels/commander_main.xml \
# 		panels/driver_adjust_camera_page01.xml \
# 		panels/driver_adjust_camera_page02.xml \
# 		panels/driver_adjust_up_down.xml \
# 		panels/driver_adjust_zoom_up_down.xml \
# 		panels/driver_forward.xml \
# 		panels/driver.xml \
# 		panels/dummy.xml \
# 		panels/err_unknown.xml \
# 		panels/ESAV_commander_adjust_camera_page01.xml \
# 		panels/ESAV_commander_adjust_camera_page02.xml \
# 		panels/ESAV_commander_adjust_up_down.xml \
# 		panels/ESAV_commander_adjust_zoom_up_down.xml \
# 		panels/ESAV_commander_camera_select.xml \
# 		panels/ESAV_commander_eptm_slew.xml \
# 		panels/ESAV_commander_eptm.xml \
# 		panels/ESAV_commander_main.xml \
# 		panels/ESAV_driver_adjust_camera_page01.xml \
# 		panels/ESAV_driver_adjust_camera_page02.xml \
# 		panels/ESAV_driver_adjust_up_down.xml \
# 		panels/ESAV_driver_adjust_zoom_up_down.xml \
# 		panels/ESAV_driver_forward.xml \
# 		panels/ESAV_driver.xml \
# 		panels/ESAV_full_gauges.xml \
# 		panels/ESAV_pc_main.xml \
# 		panels/ESAV_squad_adjust_camera_page01.xml \
# 		panels/ESAV_squad_adjust_camera_page02.xml \
# 		panels/ESAV_squad_adjust_up_down.xml \
# 		panels/ESAV_squad_adjust_zoom_up_down.xml \
# 		panels/ESAV_squad_adjust.xml \
# 		panels/ESAV_squad_edit_color.xml \
# 		panels/ESAV_squad_edit_ir_page2.xml \
# 		panels/ESAV_squad_edit_ir.xml \
# 		panels/ESAV_squad_main.xml \
# 		panels/ESS_main.xml \
# 		panels/everything.xml \
# 		panels/full_gauges.xml \
# 		panels/JD_everything.xml \
# 		panels/JD_full_gauges.xml \
# 		panels/JD_greenstar.xml \
# 		panels/LAV3_Camera_Settings_Driver.xml \
# 		panels/LAV3_Camera_Settings_Squad.xml \
# 		panels/LAV3_Camera_Settings.xml \
# 		panels/LAV3_Main.xml \
# 		panels/m1200_adjust_camera_page01.xml \
# 		panels/m1200_adjust_camera_page02.xml \
# 		panels/m1200_adjust_up_down.xml \
# 		panels/m1200_adjust_zoom_up_down.xml \
# 		panels/m1200_forward.xml \
# 		panels/m1200_full_gauges.xml \
# 		panels/m1200_panel.xml \
# 		panels/m1200a_adjust_camera_page01.xml \
# 		panels/m1200a_adjust_camera_page02.xml \
# 		panels/m1200a_adjust_up_down.xml \
# 		panels/m1200a_adjust_zoom_up_down.xml \
# 		panels/m1200a_camera_select.xml \
# 		panels/m1200a_everything.xml \
# 		panels/m1200a_full_gauges.xml \
# 		panels/m1200a_main.xml \
# 		panels/MO_commander_adjust_camera_page01.xml \
# 		panels/MO_commander_adjust_camera_page02.xml \
# 		panels/MO_commander_adjust_up_down.xml \
# 		panels/MO_commander_adjust_zoom_up_down.xml \
# 		panels/MO_commander_camera_select.xml \
# 		panels/MO_commander_eptm_slew.xml \
# 		panels/MO_commander_eptm.xml \
# 		panels/MO_commander_main.xml \
# 		panels/MO_driver_adjust_camera_page01.xml \
# 		panels/MO_driver_adjust_camera_page02.xml \
# 		panels/MO_driver_adjust_up_down.xml \
# 		panels/MO_driver_adjust_zoom_up_down.xml \
# 		panels/MO_driver_forward.xml \
# 		panels/MO_driver.xml \
# 		panels/MO_full_gauges.xml \
# 		panels/MO_pc_main.xml \
# 		panels/MO_squad_adjust_camera_page01.xml \
# 		panels/MO_squad_adjust_camera_page02.xml \
# 		panels/MO_squad_adjust_up_down.xml \
# 		panels/MO_squad_adjust_zoom_up_down.xml \
# 		panels/MO_squad_adjust.xml \
# 		panels/MO_squad_edit_color.xml \
# 		panels/MO_squad_edit_ir_page2.xml \
# 		panels/MO_squad_edit_ir.xml \
# 		panels/MO_squad_main.xml \
# 		panels/mouse_panel.xml \
# 		panels/MPC_commander_adjust_camera_page01.xml \
# 		panels/MPC_commander_adjust_camera_page02.xml \
# 		panels/MPC_commander_adjust_up_down.xml \
# 		panels/MPC_commander_adjust_zoom_up_down.xml \
# 		panels/MPC_commander_camera_select.xml \
# 		panels/MPC_commander_main.xml \
# 		panels/MPC_driver_adjust_camera_page01.xml \
# 		panels/MPC_driver_adjust_camera_page02.xml \
# 		panels/MPC_driver_adjust_up_down.xml \
# 		panels/MPC_driver_adjust_zoom_up_down.xml \
# 		panels/MPC_driver_forward.xml \
# 		panels/MPC_driver.xml \
# 		panels/MPC_everything.xml \
# 		panels/MPC_full_gauges.xml \
# 		panels/MPC_squad_adjust_camera_page01.xml \
# 		panels/MPC_squad_adjust_camera_page02.xml \
# 		panels/MPC_squad_adjust_up_down.xml \
# 		panels/MPC_squad_adjust_zoom_up_down.xml \
# 		panels/MPC_squad_adjust.xml \
# 		panels/MPC_squad_edit_color.xml \
# 		panels/MPC_squad_edit_ir_page2.xml \
# 		panels/MPC_squad_edit_ir.xml \
# 		panels/MPC_squad_main.xml \
# 		panels/none.xml \
# 		panels/NVL_main.xml \
# 		panels/NVL_menu.xml \
# 		panels/panels.xsd \
# 		panels/squad_adjust_camera_page01.xml \
# 		panels/squad_adjust_camera_page02.xml \
# 		panels/squad_adjust_up_down.xml \
# 		panels/squad_adjust_zoom_up_down.xml \
# 		panels/squad_adjust.xml \
# 		panels/squad_edit_color.xml \
# 		panels/squad_edit_ir_page2.xml \
# 		panels/squad_edit_ir.xml \
# 		panels/squad_main.xml \
# 		panels/squad.xml \
# 		panels/test.xml \
# 		panels/touch_calibrate.xml \
# 		panels/tune_key_panel.xml \
# 		panels/tune_video_panel.xml \
# 		panels/tune_view_panel.xml

# gs8plug_DATA = \
# 		plugins/plugin.xml \
# 		plugins/plugin.xsd \
# 		plugins/test.xml \
# 		\
# 		plugins/commands/default.xml \
# 		plugins/commands/ESAV_vdds.xml \
# 		plugins/commands/ESS_active.xml \
# 		plugins/commands/JD_commands.xml \
# 		plugins/commands/LAV3_vdds_touchscreen.xml \
# 		plugins/commands/LAV3_vdds.xml \
# 		plugins/commands/m1200_vdds.xml \
# 		plugins/commands/MO_vdds.xml \
# 		plugins/commands/MPC_vdds.xml \
# 		plugins/commands/touch_calibrate.xml \
# 		plugins/commands/tune.xml \
# 		plugins/commands/vcb_constants.xml \
# 		plugins/commands/vdds_common.xml \
# 		plugins/commands/VehicleDataSample.xml \
# 		plugins/commands/workbench_common_views.xml \
# 		plugins/commands/workbench_common.xml \
# 		plugins/commands/workbench_esav_cmd.xml \
# 		plugins/commands/workbench_esav_dri.xml \
# 		plugins/commands/workbench_ESAV.xml \
# 		plugins/commands/workbench_ESS.xml \
# 		plugins/commands/workbench_jd.xml \
# 		plugins/commands/workbench_m1200.xml \
# 		plugins/commands/workbench_MO_cmd.xml \
# 		plugins/commands/workbench_MO_dri.xml \
# 		plugins/commands/workbench_MO.xml \
# 		plugins/commands/workbench_mpc.xml \
# 		plugins/commands/workbench_NVL.xml \
# 		plugins/commands/workbench_tune.xml \
# 		\
# 		plugins/drawobjs/default.xml \
# 		plugins/drawobjs/LINUX.xml \
# 		plugins/drawobjs/MSWIN_WCE.xml \
# 		plugins/drawobjs/MSWIN32.xml \
# 		plugins/drawobjs/MSWIN64.xml \
# 		\
# 		plugins/externalxml/default.xml	\
# 		plugins/functions/default.xml \
# 		\
# 		plugins/inputdevices/atlas_input_device.xml \
# 		plugins/inputdevices/avelex_input_device.xml \
# 		plugins/inputdevices/can_input_device.xml \
# 		plugins/inputdevices/can_input_device1.xml \
# 		plugins/inputdevices/can_kludge_input_device.xml \
# 		plugins/inputdevices/default.xml \
# 		plugins/inputdevices/ESAV_input_devices_0.xml \
# 		plugins/inputdevices/ESAV_input_devices_1.xml \
# 		plugins/inputdevices/ESAV_input_devices_2.xml \
# 		plugins/inputdevices/ESAV_input_devices_3.xml \
# 		plugins/inputdevices/gdc_cfpd10_input_device.xml \
# 		plugins/inputdevices/gdc_dcm10_input_device.xml \
# 		plugins/inputdevices/input_atlas.xml \
# 		plugins/inputdevices/input_devices_0.xml \
# 		plugins/inputdevices/input_devices_1.xml \
# 		plugins/inputdevices/input_devices_2.xml \
# 		plugins/inputdevices/input_devices_3.xml \
# 		plugins/inputdevices/input_devices_AvalexCMEPTM.xml \
# 		plugins/inputdevices/LAV3_input_devices_0.xml \
# 		plugins/inputdevices/LAV3_input_devices_1.xml \
# 		plugins/inputdevices/LAV3_input_devices_2.xml \
# 		plugins/inputdevices/LAV3_input_devices_3.xml \
# 		plugins/inputdevices/MO_input_devices_0.xml \
# 		plugins/inputdevices/MO_input_devices_1.xml \
# 		plugins/inputdevices/MO_input_devices_2.xml \
# 		plugins/inputdevices/MO_input_devices_3.xml \
# 		plugins/inputdevices/serial_pass_thru_bi_directional.xml \
# 		plugins/inputdevices/uk_3head_input_dev_center.xml \
# 		plugins/inputdevices/uk_3head_input_dev_left.xml \
# 		plugins/inputdevices/uk_3head_input_dev_right.xml \
# 		plugins/inputdevices/ukctd_input_devices_0.xml \
# 		plugins/inputdevices/ukctd13_input_device.xml \
# 		plugins/inputdevices/vcb_input_devices_0.xml

# gs8scrn_DATA = \
# 		\
# 		screens/commander_screen.xml \
# 		screens/DEMO_screen.xml \
# 		screens/driver_screen.xml \
# 		screens/ESAV_commander_screen.xml \
# 		screens/ESAV_driver_screen.xml \
# 		screens/ESAV_pc_screen.xml \
# 		screens/ESAV_squad_screen.xml \
# 		screens/ESS_screen.xml \
# 		screens/everything.xml \
# 		screens/greenhills.xml \
# 		screens/JD_greenstar_screen.xml \
# 		screens/LAV3_screen_driver.xml \
# 		screens/LAV3_screen_squad.xml \
# 		screens/LAV3_screen.xml \
# 		screens/m1200_mrt_screen.xml \
# 		screens/m1200_screen.xml \
# 		screens/m1200a_screen.xml \
# 		screens/MO_commander_screen.xml \
# 		screens/MO_driver_screen.xml \
# 		screens/MO_pc_screen.xml \
# 		screens/MO_squad_screen.xml \
# 		screens/mouse_screen.xml \
# 		screens/MPC_commander_screen.xml \
# 		screens/MPC_driver_screen.xml \
# 		screens/MPC_squad_screen.xml \
# 		screens/none.xml \
# 		screens/NVL_screen.xml \
# 		screens/screens.xsd \
# 		screens/squad_screen.xml \
# 		screens/test.xml \
# 		screens/tune_screen.xml

